# hexaTuneApp

./: .gitignore  AGENTS.md  CHANGELOG.md  Gemfile  README.md  REUSE.toml  openapi.json  openapi_old.json  package-lock.json  package.json  plans.md  pnpm-lock.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md  support.md
.github/workflows/: android-play.yml  auto-add-project.yml  auto-assign.yml  branch-name-check.yml  commitlint.yml  ios-testflight.yml  labeler.yml  main-pr-protect.yml  pr-title-check.yml  release-pr-protect.yml  release.yml  reuse-lint.yml  stale.yml
.husky/: commit-msg  pre-commit
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  BRANDING.md  COMMIT_STRATEGY.md  COMMUNITY.md  CONFIGURATION.md  CONTACT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  FAQ.md  GETTING_STARTED.md  LABELLING_STRATEGY.md  PROJECT_BOARD.md  PROJECT_STRUCTURE.md  PR_STRATEGY.md  STYLE_GUIDE.md  SUMMARY.md  SUPPORT.md
fastlane/: Appfile  Fastfile
hexatuneapp/: .env.dev  .env.example  .env.prod  .env.stage  .env.test  .gitignore  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
hexatuneapp/android/: gradle.properties
hexatuneapp/android/app/src/main/cpp/: CMakeLists.txt  native_audio_bridge.c
hexatuneapp/integration_test/: auth_flow_test.dart  bootstrap_test.dart  logout_flow_test.dart
hexatuneapp/ios/: .gitignore  exportOptions.plist
hexatuneapp/lib/: main.dart
hexatuneapp/linux/: CMakeLists.txt
hexatuneapp/test/: widget_test.dart
(+811 files in other folders)
